<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>
    <Button
        android:id="@+id/btnStartService"
        android:text="@string/btn_start_listener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="startClipService"
        android:background="@drawable/btn_bg"/>
    <Button
        android:id="@+id/btnStopService"
        android:text="@string/btn_stop_listener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:onClick="stopClipService"
        android:background="@drawable/btn_bg"/>
    <Button
        android:id="@+id/btnSetting"
        android:text="@string/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openSetting"
        android:background="@drawable/btn_bg"/>
</LinearLayout>
